Terraform_aws/listeners.tf
resource "aws_lb_listener" "front_end" {
  load_balancer_arn = aws_lb.testapplb.arn
  port = "80"
  protocol = "HTTP"
  default_action {
    type = "forward"
    target_group_arn = aws_lb_target_group.albtarget.arn
  }

  depends_on = [ aws_lb_target_group.albtarget ]
}
